--- a/src/components/AddPetForm.css
+++ b/src/components/AddPetForm.css
@@ -28,3 +28,74 @@
   padding: 10px;
   cursor: pointer;
 }
+
+
+
+.popup-form form {
+  display: flex;
+  flex-direction: column;
+}
+
+.popup-form input {
+  margin-bottom: 10px;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.popup-form button {
+  margin-top: 5px;
+  padding: 8px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  background-color: #06ccf9;
+  color: white;
+}
+
+.popup-form button:hover {
+  background-color: #05a8c4;
+}
+.qr-popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 2000;
+}
+
+.qr-popup {
+ 
+  padding: 20px;
+  border-radius: 10px;
+  /* box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3); */
+  text-align: center;
+  max-width: 600px;
+  height: 600px;
+  width: 90%;
+}
+
+.qr-image {
+  width: 50%; /* Adjust size */
+  height: auto;
+  margin-bottom: 15px;
+}
+
+.close-btn {
+  background: #ff4d4d;
+  color: #fff;
+  border: none;
+  padding: 8px 15px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 14px;
+}
+
+.close-btn:hover {
+  background: #e60000;
+}
