--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -42,56 +42,39 @@
   }
 }
 /* //////// */
-.homepage-container {
-  font-family: 'Segoe UI', sans-serif;
-  background: #ffffff;
-  color: #333;
-}
+/* Hero Section */
 
 .hero-section {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  /* padding: 60px 10%; */
-  background: #f7f9fd;
-  flex-wrap: wrap;
   position: relative;
-  height: 750px;
+  width: 100%;
+  height: 100vh; 
   overflow: hidden;
 }
 
-.hero-text h1 {
-  /* margin-left: -18%; */
-  font-size: 40px;
+.video-background {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+
+  width: auto;
+  height: auto;
+  z-index: -1;
+  transform: translate(-50%, -50%);
+  object-fit: contain;
 }
-.hero-text h3 {
-    margin-left:5%;
-    font-size: 19px;
+
+/* Responsive fallback for very small screens */
+@media (max-width: 768px) {
+  .hero-section {
+    height: 60vh;
   }
 
-
-.hero-text {
-  position: absolute;
-  top: 20%;
-  left: 4%;
-  z-index: 2;
-  color: rgb(9, 9, 9);
- margin-left: 20%;
-  text-shadow: 1px 1px 4px rgba(0,0,0,0.7);
-}
-
-.hero-img {
-  width:100%;
-  height: 100%;
-  /* object-fit:cover; */
-  display: block;
-}
-.hero-section::before {
-  content: "";
-  position: absolute;
-  inset: 0;
-  /* background: rgba(255, 255, 255, 0.3); */
-  z-index: 1;
+  .video-background {
+    min-width: 100%;
+    min-height: 100%;
+  }
 }
 
 
@@ -463,6 +446,7 @@
   .promotions-grid {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     height: auto;
     padding: 20px 10px;
   }
@@ -831,6 +815,8 @@ li{
 
   .category-item {
     flex: 1 1 100%;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .imgfood {
