--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,4 +1,3 @@
-/* General Navbar Styling */
 .navbar {
   display: flex;
   flex-wrap: wrap;
@@ -8,10 +7,10 @@
   background-color: black;
   color: white;
 
-  position: fixed;     /* ✅ Fixes navbar to top */
+  position: sticky;     /* ✅ Fixes navbar to top */
   top: 0;              /* ✅ Aligns to top */
   left: 0;
-  width: 100%;         /* Full width */
+  /* width: 100%;          */
   z-index: 1000;       /* Keeps it on top of other elements */
 }
 
@@ -61,7 +60,8 @@
 
 .nav-link:hover,
 .nav-link.active {
-  color: #d4f0d4;
+  color:gold;
+  text-decoration: underline;
 }
 
 /* Responsive Styles */
@@ -100,6 +100,6 @@
 
   .nav-link {
     padding: 0.5rem 0;
-    color: red;
+    color:white;
   }
 }
