--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -102,7 +102,7 @@
   align-items: center;
   justify-content: center;
   padding: 1rem;
-  margin-top: 15px;
+  
   
 }
 
@@ -177,7 +177,9 @@
   .hero-heading {
     font-size: 2.5rem;
   }
-
+  .hero-section{
+    margin-top: 50px;
+  }
   .hero-subtext {
     font-size: 1.2rem;
     padding: 0 1rem;
