--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -108,3 +108,38 @@
   color: yellow; /* or your preferred highlight color */
   font-weight: bold;
 }
+
+.user-info {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  color: white;
+  margin-left: 1rem;
+}
+
+.profile-pic {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.user-details {
+  color: white;
+  display: flex;
+  flex-direction: column;
+  font-size: 0.85rem;
+}
+
+.profile-link {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  color: white;
+}
+
+.profile-pic {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+}
