--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -108,7 +108,7 @@
   color: yellow; /* or your preferred highlight color */
   font-weight: bold;
 }
-
+/* 
 .user-info {
   display: flex;
   align-items: center;
@@ -142,4 +142,4 @@
   width: 30px;
   height: 30px;
   border-radius: 50%;
-}
+} */
